# lista5

./: CMakeLists.txt  TempClass.cpp  TempClass.h  figura.cpp  figura.h  kolo.cpp  kolo.h  kwadrat.cpp  kwadrat.h  main.cpp  prostakat.cpp  prostakat.h  trProst.cpp  trProst.h  trapez.cpp  trapez.h
